--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ counter-strike-sharp/addons
 counter-strike-sharp/cfg
 counter-strike-sharp/MatchZy
 cs-base/data
+css-base/data
 cs2-base/data
 cs2-base/steamclient.so
 csgo-base/data
