--- a/minecraft/Dockerfile
+++ b/minecraft/Dockerfile
@@ -1,8 +1,8 @@
 FROM itzg/minecraft-server
 
 RUN apt -y update
-RUN apt install  -y iproute2 python3.9 python3-pip
-RUN python3.9 -m pip install asyncio opengsq
+RUN apt install  -y iproute2 python3 python3-pip
+RUN python3 -m pip install asyncio opengsq --break-system-packages
 
 RUN git clone https://github.com/Tiiffi/mcrcon.git /tmp/mcrcon
 RUN cd /tmp/mcrcon && make && make install && rm /tmp/mcrcon -rf
