--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ csgo-surf/mysql_root_password
 csgo-surf/maps
 haloce/data
 hl2/data
-l4d2/data
+l4d2-base/data
 minecraft-build/plugins/*.jar
 minecraft-build/.svn
 minecraft-survival/plugins/ChatControl*.jar
