--- a/l4d2-vanilla/Dockerfile
+++ b/l4d2-vanilla/Dockerfile
@@ -6,5 +6,7 @@ USER steam
 WORKDIR /l4d2
 
 COPY --chown=steam:steam entrypoint.sh ./entrypoint.sh
+COPY --chown=steam:steam cfg ./left4dead2/cfg
+
 RUN chmod +x ./entrypoint.sh
 ENTRYPOINT ./entrypoint.sh
