--- a/cs2-armsrace/Dockerfile
+++ b/cs2-armsrace/Dockerfile
@@ -1,5 +1,5 @@
 FROM cs2-base
-MAINTAINER LAN-slide
+LABEL maintainer="LAN-slide"
 
 USER root
 RUN mkdir -p /game/csgo/replays && chown -R steam:steam  /game/csgo/replays && chmod a+rwX /game/csgo/replays
@@ -7,11 +7,6 @@ RUN mkdir -p /game/csgo/replays && chown -R steam:steam  /game/csgo/replays && c
 USER steam
 WORKDIR /cs2
 
-COPY --chown=steam:steam entrypoint.py defaultenv.ini stats.py /cs2/
-COPY --chown=steam:steam cfg /cs2/game/csgo/cfg
-#COPY --chown=steam:steam team-logos /cs2/game/csgo/resource/flash/econ/tournaments/teams
+COPY --chown=steam:steam defaultenv.ini stats.py /cs2/
 
-ENV PYTHONUNBUFFERED=0
-RUN chmod +x entrypoint.py
-
-ENTRYPOINT ["./entrypoint.py"]
+ENTRYPOINT ["./entrypoint.py", "armsrace"]
