--- a/cs2-comp/defaultenv.ini
+++ b/cs2-comp/defaultenv.ini
@@ -1,5 +1,6 @@
 [env]
 SV_HOSTNAME=CS2 Server
+SV_HIBERNATE_WHEN_EMPTY=0
 TEAM1=None
 TEAM1_ID=None
 TEAM2=None
@@ -8,16 +9,41 @@ STEAMTOKEN=None
 TICKRATE=128
 GAME_TYPE=0
 GAME_MODE=1
+GAME_ALIAS=competitive
 RCON_PASSWORD=lanslide
 MAXPLAYERS_OVERRIDE=None
-MAP_GROUP=mg_active
 MAP=de_dust2
-TV_ENABLE=False
-TV_NAME=None
+
+SV_HIBERNATE_POSTGAME_DELAY=30
+TV_ADVERTISE_WATCHABLE=True
+TV_ALLOW_CAMERA_MAN=True
+TV_ALLOW_STATIC_SHOTS=True
+TV_AUTORECORD=False
+TV_CHATGROUPSIZE=0
+TV_CHATTIMELIMIT=0
+TV_DEBUG=False
 TV_DELAY=0
-TV_DELAY1=7
+TV_DELAY1=0
+TV_DELAYMAPCHANGE=True
+TV_DELTACACHE=2
+TV_DISPATCHMODE=1
+TV_ENABLE=True
+TV_ENABLE1=True
+TV_MAXCLIENTS=30
+TV_MAXRATE=0
+TV_NAME=None
+TV_NOCHAT=True
+TV_OVERRIDEMASTER=False
 TV_PASSWORD=None
-TV_RELAYPASSWORD=relaypwdsadge
+TV_PORT=27020
+TV_PORT1=27021
+TV_SHOW_ALLCHAT=False
+TV_RELAYRADIO=False
+TV_RELAYVOICE=False
+TV_RELAYPASSWORD=None
+TV_TIMEOUT=60
+TV_TRANSMITALL=True
+
 EVENT_NAME=None
 MATCH_ID=None
 NUM_MAPS=1
