--- a/csgo-comp/Dockerfile
+++ b/csgo-comp/Dockerfile
@@ -1,7 +1,7 @@
 FROM ls-warmod as warmod
 FROM sourcemod as sourcemod
 FROM csgo-base
-MAINTAINER LAN-slide
+LABEL maintainer="LAN-slide"
 
 USER root
 RUN mkdir -p /csgo/csgo/warmod && chown -R steam:steam  /csgo/csgo/warmod && chmod a+rwX /csgo/csgo/warmod
