--- a/ls-warmod/Dockerfile
+++ b/ls-warmod/Dockerfile
@@ -1,3 +1,4 @@
 FROM base
+LABEL maintainer="LAN-slide"
 RUN git clone https://gitlab+deploy-token-190229:ADidL2yx3YB-RmvuCxNC@gitlab.com/lanslide/ls-sourcemod.git
 RUN cd ls-sourcemod/ && ./ncompile.sh
