--- a/wineconsole/Dockerfile
+++ b/wineconsole/Dockerfile
@@ -1,3 +1,4 @@
 FROM i386/alpine:3.13
+LABEL maintainer="LAN-slide"
 #RUN apt-get update && apt-get install -y wine freetype ncurses bash
 RUN apk add --no-cache wine freetype ncurses bash
