--- a/cs2-wingman/Dockerfile
+++ b/cs2-wingman/Dockerfile
@@ -1,7 +1,7 @@
 #FROM ls-warmod as warmod
 #FROM sourcemod as sourcemod
 FROM cs2-base
-MAINTAINER LAN-slide
+LABEL maintainer="LAN-slide"
 
 USER root
 RUN mkdir -p /game/csgo/replays && chown -R steam:steam  /game/csgo/replays && chmod a+rwX /game/csgo/replays
@@ -16,12 +16,6 @@ COPY --from=counter-strike-sharp --chown=steam:steam /css /cs2/game/csgo
 
 RUN sed -i "/Game_LowViolence/a\ \t\t\tGame\tcsgo/addons/metamod" /cs2/game/csgo/gameinfo.gi
 
-#RUN mkdir -p /cs2/game/csgo/PugSharp/Config
-#RUN mkdir -p /cs2/game/csgo/PugSharp/Demo
+COPY --chown=steam:steam defaultenv.ini stats.py /cs2/
 
-COPY --chown=steam:steam entrypoint.py defaultenv.ini stats.py /cs2/
-COPY --chown=steam:steam cfg /cs2/game/csgo/cfg
-
-ENV PYTHONUNBUFFERED=0
-
-ENTRYPOINT ["./entrypoint.py"]
+ENTRYPOINT ["./entrypoint.py", "wingman"]
