--- a/cs2-wingman/defaultenv.ini
+++ b/cs2-wingman/defaultenv.ini
@@ -1,5 +1,6 @@
 [env]
-SV_HOSTNAME=CS2 Wingman Server
+SV_HOSTNAME=CS2 Server
+SV_HIBERNATE_WHEN_EMPTY=0
 TEAM1=None
 TEAM1_ID=None
 TEAM2=None
@@ -8,16 +9,41 @@ STEAMTOKEN=None
 TICKRATE=128
 GAME_TYPE=0
 GAME_MODE=2
+GAME_ALIAS=wingman
 RCON_PASSWORD=lanslide
 MAXPLAYERS_OVERRIDE=None
-MAP_GROUP=mg_active
 MAP=de_inferno
-TV_ENABLE=False
-TV_NAME=None
+
+SV_HIBERNATE_POSTGAME_DELAY=30
+TV_ADVERTISE_WATCHABLE=True
+TV_ALLOW_CAMERA_MAN=True
+TV_ALLOW_STATIC_SHOTS=True
+TV_AUTORECORD=False
+TV_CHATGROUPSIZE=0
+TV_CHATTIMELIMIT=0
+TV_DEBUG=False
 TV_DELAY=0
-TV_DELAY1=7
-TV_PASSWORD=sadge
-TV_RELAYPASSWORD=relaypwdsadge
+TV_DELAY1=0
+TV_DELAYMAPCHANGE=True
+TV_DELTACACHE=2
+TV_DISPATCHMODE=1
+TV_ENABLE=True
+TV_ENABLE1=True
+TV_MAXCLIENTS=30
+TV_MAXRATE=0
+TV_NAME=None
+TV_NOCHAT=True
+TV_OVERRIDEMASTER=False
+TV_PASSWORD=None
+TV_PORT=27020
+TV_PORT1=27021
+TV_SHOW_ALLCHAT=False
+TV_RELAYRADIO=False
+TV_RELAYVOICE=False
+TV_RELAYPASSWORD=None
+TV_TIMEOUT=60
+TV_TRANSMITALL=True
+
 EVENT_NAME=None
 MATCH_ID=None
 NUM_MAPS=1
@@ -26,17 +52,17 @@ PORT=27015
 SV_PASSWORD=None
 SV_LAN=False
 SERVERCFGFILE=None
-IS_WINGMAN=0
+IS_WINGMAN=1
 
-FREEZETIME=15
+FREEZETIME=20
 OVERTIME_STARTMONEY=12500
 CLINCH_SERIES=1
 MIN_SPECTATORS_TO_READY=0
 SIDE_TYPE=always_knife,
 SKIP_VETO=0
-VETO_MODE=team1_ban,team2_ban,team1_ban,team2_ban,team1_ban,team2_ban,
+VETO_MODE=team1_ban,team2_ban,team1_ban,team2_ban,team1_pick
 VETO_FIRST=team1
-VETO_MAP_POOL=de_ancient,de_anubis,de_inferno,de_mirage,de_nuke,de_overpass,de_vertigo,
+VETO_MAP_POOL=de_assembly,de_inferno,de_memento,de_nuke,de_overpass,de_vertigo
 
 WHITELIST_ENABLED=False
 ENABLE_KNIFE=True
@@ -63,8 +89,8 @@ MAX_SAVED_LAST_GRENADE=512
 SMOKE_COLOR_ENABLED=False
 EVERYONE_IS_ADMIN=False
 HOSTNAME_FORMAT=None
+SHOW_CREDITS_AT_MATCH_START=True
 ENABLE_DAMAGE_REPORT=True
 MATCH_START_MESSAGE=None
-SHOW_CREDITS_AT_MATCH_START=True
 ENABLE_MATCH_SCRIM=False
 
