--- a/zdaemon/Dockerfile
+++ b/zdaemon/Dockerfile
@@ -1,4 +1,5 @@
 FROM base
+LABEL maintainer="LAN-slide"
 
 RUN dpkg --add-architecture i386 &&  apt-get update && apt-get install -y libc6-i386 libstdc++6:i386
 
