--- a/cs2-base/cfg/server.cfg
+++ b/cs2-base/cfg/server.cfg
@@ -1,14 +1,32 @@
-//Game cvars
+// Game cvars
 mp_teamflag_1 AU
 mp_teamflag_2 AU
 
-//Log cvars
+// Log cvars
 log on
 sv_logfile 1
 mp_logdetail 3
 mp_logmoney 1
 mp_logdetail_items 1
-mp_disconnect_kills_players 0
-sv_auto_full_alltalk_during_warmup_half_end 1
-sv_deadtalk 0
+
+// Comp Settings
 sv_logecho 0
+sv_password ""
+sv_visiblemaxplayers 10
+
+// Warmup settings
+mp_warmup_start
+mp_warmup_pausetimer 1
+mp_warmuptime 9999
+
+// CSTV Settings
+tv_advertise_watchable 1
+tv_delay 0
+tv_delay1 0
+tv_enable 0
+tv_enable1 0
+tv_nochat 1
+tv_name "SourceTV"
+tv_port 27015
+tv_timeout 60
+tv_title "SourceTV"
