--- a/cs2-base/defaultenv.ini
+++ b/cs2-base/defaultenv.ini
@@ -27,6 +27,7 @@ EVENT_NAME=None
 FREEZETIME=20
 HOSTNAME_FORMAT=None
 KICK_WHEN_NO_MATCH=False
+MATCH_API_KEY=None
 MATCH_START_MESSAGE=None
 MAXPLAYERS_OVERRIDE=None
 MAX_SAVED_LAST_GRENADE=512
