--- a/wreckfest/Dockerfile
+++ b/wreckfest/Dockerfile
@@ -3,10 +3,10 @@ LABEL maintainer="LAN-slide"
 
 # Reference: https://docs.google.com/spreadsheets/d/14zPsXCGRWkIb42XTa6GxDkMw0cSzNZxgbp7_o66GYJ8/edit#gid=797069815
 
-RUN useradd -m steam && mkdir /wreckfest && chown steam:steam /wreckfest
+RUN useradd -m steam && mkdir /wreckfest2 && chown steam:steam /wreckfest
 
 USER steam
-WORKDIR /wreckfest
+WORKDIR /wreckfest2
 
 COPY --chown=steam:steam data ./
 COPY --chown=steam:steam entrypoint.sh ./
